# playspace

./: .gitignore  README.md  a.cpp  memo.txt
Qt/otameshi/: CMakeLists.txt  otameshi_ja_JP.ts
Qt/otameshi/tanoshiine/: CMakeLists.txt  tanoshiine_ja_JP.ts
devIce/ice/: CMakeLists.txt  a.cpp  a.txt  print.ice
devIce/unix_domain_socket/: CMakeLists.txt  socket.hpp
devInfoshare/: a.cpp  memo.txt
devInfoshare/InfoShare/: CMakeLists.txt  InfoShare.cpp  InfoShare.h  InfoShareTest.cpp  header.hpp  hpl_types.h  infoshare.cpp  infoshare.h  infoshare.proto  main.cpp  memo.txt  test.cpp
devInfoshare/InfoShare/test/: check_dict_class.cpp  debugprint.cpp  main.cpp  main2.cpp  proto.cpp  receiver.cpp  sender.cpp
devInfoshare/InfoShare/try/: CMakeLists.txt  client.cpp  clientmain.cpp  cm.cpp  example.cpp  header.hpp  sAsyncSocket.hpp  sUDPSocket.hpp  servermain.cpp  test.cpp  test1.cpp  test2.cpp
devInfoshare/InfoShare/try/test/: test2.cpp  time_measure.cpp
devInfoshare/try/: .server.cpp.swp  CMakeLists.txt  client.cpp  header.hpp  server.cpp
for_sync/: a.cpp  backup_Infoshare.cpp
for_sync/boosttest/: CMakeLists.txt  func.hpp  tester.cpp
for_sync/make_tes/: CMakeLists.txt  a.cpp
kadai/ninshiki/: CMakeLists.txt  file_input.cpp  gccver.sh
kyopro/: A-Apple.hs  A-FullHouse.hs  A-UniqueLetter.hs  A-WorldCup.hs  A-atcodersubstr.hs  B-Ancestor.cpp  B-PracticalComputing.hs  tmplate.cpp
lecture/adcon/: adcon_lqr.m  state_estimater_kadai.m
my_project/: time_measure.cpp
my_project/asio/: CMakeLists.txt  main.cpp  mq.cpp  msg.proto  play.cpp  test_io_context_behavior.cpp
my_project/fast_io/: CMakeLists.txt  main.cpp
my_project/fast_io/buld/: .ninja_deps  .ninja_log  build.ninja  main
my_project/hajime_cmd/: CMakeLists.txt  check_error.cpp  classes.cpp  classes.hpp  hajime.proto  main.cpp  time_measure.cpp  wrapperclass.hpp
my_project/inverse_kinematics/: impl.hpp
my_project/mqtt/: CMakeLists.txt  receive.py  send.cpp  send.py
my_project/ncurse/: compile.sh  main.cpp
my_project/opengl_sample/: circle.cpp  compile.sh  glfw_circle.cpp
my_project/proto_serialize_time_measure/: CMakeLists.txt  data.proto  main.cpp  size_compare.cpp
my_project/protobuf_api/: CMakeLists.txt  a.cpp  data.proto  generic_assign_access.cpp  main.cpp  old.cpp  protobuf_msg_worker.hpp
my_project/schesule/: policy.cpp
my_project/thread_cost_measure/: CMakeLists.txt  atomic.cpp  stdout_time.cpp  thread_time.cpp
my_project/torque_calc/: CMakeLists.txt  impl.hpp  main.cpp
my_project/visibility_graph/: CMakeLists.txt  cv.hpp  graph.hpp  main.cpp  show.plt
my_project/yaml-cpp/: CMakeLists.txt  controller.yaml  main.cpp
my_project/zeromq/: CMakeLists.txt  a.cpp  b.cpp  main.cpp  pub2.cpp  rep_req.cpp  simple_pub.cpp  simple_sub.cpp  thread_local.cpp
play/: CMakeLists.txt  a.cpp  dead.cpp  infoshare.proto  main.cpp  myfunc.cpp  name.cpp  p.cpp  template.cpp  thread_time.cpp  virtual.cpp
play/plot/: CMakeLists.txt  a.plt  arm.cpp  plot.cpp
pro/: CMakeLists.txt  getproto.cpp  procpp.cpp  start.sh
pro/proto/: CMakeLists.txt  pro.pb.cc  pro.pb.h  pro.proto
pro/rece/: CMakeLists.txt  getproto.cpp
pro/send/: CMakeLists.txt  procpp.cpp
python/scripts/: audio_play.py  behavior_name_dict.txt  client.py  common_network.py  myfile.txt  parse_htn_name.py  root_network.py  server.py
python/scripts/cap/: info_com.py  infoshare.proto  infoshare_pb2.py  joystick_controll.proto  joystick_controll_pb2.py  send.py
save_files/: actions.yaml  count_vertices.wbt
shell/: get_diff.sh
socket/: CMakeLists.txt  boostsocketclient.cpp  boostsocketserver.cpp  interclient.cpp  interserver.cpp  receiver  receiver.cpp  sample.cpp  sender  sender.cpp  tcpserver.cpp
socket/try/: CMakeLists.txt  interclient.cpp  interserver.cpp  tcpclient.cpp
tex/latex_train/test1/: test1.bib  test1.tex
tmplate/: CMakeLists.txt  a.cpp  template.cpp
