cmake_minimum_required(VERSION 3.20)
project(try)
find_package(Protobuf REQUIRED)
include_directories(${Protobuf_INCLUDE_DIRS})
protobuf_generate_cpp(PROTO_SRCS PROTO_HDRS infoshare.proto)
#protobuf_generate_cpp(PROTO_SRCS PROTO_HDRS DESCRIPTORS PROTO_DESCS pro.proto)
# add_library(infoshare SHARED ${PROTO_SRCS} ${PROTO_HDRS})
add_executable(main main.cpp ${PROTO_SRCS} ${PROTO_HDRS})
target_include_directories(main PRIVATE ${CMAKE_CURRENT_BINARY_DIR})
# target_link_directories(main ${CMAKE_CURRENT_BINARY_DIR})
target_link_libraries(main -lrt protobuf::libprotobuf )