cmake_minimum_required(VERSION 3.10)
project(Infoshare)
find_package(Protobuf REQUIRED)
find_package(Boost 1.65.1 REQUIRED thread system date_time)
# SET(Boost_USE_STATIC_LIBS ON)
# set(Boost_USE_STATIC_RUNTIME ON)
SET(Boost_USE_MULTITHREAD ON)

option(NORMAL "nomal build" OFF)
option(PROTO_DBG "proto debug build" OFF)

protobuf_generate_cpp(PROTO_SRCS PROTO_HDRS infoshare.proto)

set(InfoShareSrc main.cpp infoshare.cpp infoshare.h hajime_command.h try/sUDPSocket.hpp)

if(NORMAL)
    add_executable(main ${InfoShareSrc} ${PROTO_SRCS} ${PROTO_HDRS})
    target_compile_features(main PUBLIC cxx_std_17)
    target_compile_options(main PUBLIC -O2 -Wall -pedantic) 
    target_include_directories(main PRIVATE ${CMAKE_CURRENT_BINARY_DIR})
    target_include_directories(main PRIVATE ${Protobuf_INCLUDE_DIRS})
    target_include_directories(main PRIVATE ${CMAKE_SOURCE_DIR}/try)
    target_include_directories(main PRIVATE ${Boost_INCLUDE_DIRS})
    target_link_libraries(main ${Boost_LIBRARIES})
    target_link_libraries(main -lrt protobuf::libprotobuf )
endif()

if(PROTO_DBG)
    add_executable(protodebug proto.cpp ${PROTO_SRCS} ${PROTO_HDRS})
    target_compile_features(protodebug PUBLIC cxx_std_17)
    target_compile_options(protodebug PUBLIC -O2 -Wall -pedantic) 
    target_include_directories(protodebug PRIVATE ${CMAKE_CURRENT_BINARY_DIR})
    target_include_directories(protodebug PRIVATE ${Protobuf_INCLUDE_DIRS})
    target_link_libraries(protodebug -lrt protobuf::libprotobuf )
endif()
message("------------------//include directories//-----------------")
message(${Protobuf_INCLUDE_DIRS})
message(${CMAKE_CURRENT_BINARY_DIR})
message(${CMAKE_SOURCE_DIR}/try)
message("----------------------------------------------------------")
