cmake_minimum_required(VERSION 3.18)
project(try)
find_package(Boost REQUIRED)
add_executable(server server.cpp ${Boost_LIBRARIES})
add_executable(client client.cpp ${Boost_LIBRARIES})
target_compile_features(server  PUBLIC cxx_std_17)
target_compile_options(server  PUBLIC -O2 -Wall -Wpedantic) 
target_include_directories(server  PRIVATE ${CMAKE_CURRENT_BINARY_DIR})
target_include_directories(server PRIVATE ${Boost_INCLUDE_DIRS})

target_compile_features(client  PUBLIC cxx_std_17)
target_compile_options(client  PUBLIC -O2 -Wall -Wpedantic) 
target_include_directories(client  PRIVATE ${CMAKE_CURRENT_BINARY_DIR})
target_include_directories(client PRIVATE ${Boost_INCLUDE_DIRS})
