find_package(Protobuf REQUIRED)
include_directories(${Protobuf_INCLUDE_DIRS})
include_directories(${CMAKE_CURRENT_BINARY_DIR})
protobuf_generate_cpp(PROTO_SRCS PROTO_HDRS data.proto)
add_executable(main main.cpp ${PROTO_SRCS} ${PROTO_HDRS} )
add_executable(size_test size_compare.cpp ${PROTO_SRCS} ${PROTO_HDRS})
target_link_libraries(main ${Protobuf_LIBRARIES})
target_link_libraries(size_test ${Protobuf_LIBRARIES})
