project(prototry)
cmake_minimum_required(VERSION 3.10)
add_compile_options("-Wall")
find_package(Protobuf REQUIRED)
#add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../proto build)
#target_include_directories(PUBLIC /usr/local/include/google/protobuf)
include_directories(../proto /usr/local/include/google/protobuf)
add_executable(sendbin procpp.cpp)
target_link_libraries(sendbin protobufff protobuf::libprotobuf)